@@ -2,13 +2,14 @@ package Coverage::Server;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.5.%d', q$Rev: 4 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.5.%d', q$Rev: 5 $ =~ /\d+/gmx );
 
 use Class::Usul;
 use Class::Usul::Constants  qw( NUL TRUE );
 use Class::Usul::Functions  qw( env_prefix );
 use Class::Usul::Types      qw( HashRef Plinth );
 use Coverage::Server::Util  qw( enhance );
+use HTTP::Status            qw( HTTP_FOUND );
 use Plack::Builder;
 use Web::Simple;
 
@@ -29,10 +30,10 @@ around 'to_psgi_app' => sub {
    my $conf = $self->config; my $static = $conf->serve_as_static;
 
    return builder {
+      enable 'ContentLength';
+      enable 'FixMissingBodyInRedirect';
+      enable "ConditionalGET";
       mount $conf->mount_point => builder {
-         enable 'ContentLength';
-         enable 'FixMissingBodyInRedirect';
-         enable "ConditionalGET";
          enable 'Deflater',
             content_type => $conf->deflate_types, vary_user_agent => TRUE;
          enable 'Static',
@@ -46,6 +47,9 @@ around 'to_psgi_app' => sub {
          enable "LogDispatch", logger => $self->log;
          enable_if { $self->debug } 'Debug';
          $psgi_app;
+      };
+      mount '/' => builder {
+         sub { [ HTTP_FOUND, [ 'Location', $conf->default_route ], [] ] }
       };
    };
 };
